--- a/Booking+home page/Angsenghong_Week7Codes.zip/ux_design_homepage.html
+++ b/Booking+home page/Angsenghong_Week7Codes.zip/ux_design_homepage.html
@@ -68,7 +68,7 @@
               catering
             </button>
           </p>
-          <img src="images folder/placeholder.png">
+          <img src="images folder/placeholder.png"><!--yoyo-->
         </div>
     </body>
 </html>
