--- a/IT1301 Assignment 1/Code/DiningPage.html
+++ b/IT1301 Assignment 1/Code/DiningPage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="WongResort.png" alt="logo-img" id = "logo-img">
+        <img src="ResortPicture/WongResort.png" alt="logo-img" id = "logo-img">
         <nav>
             <ul>
                 <li class ="nav-li"><a href="IT1301 Assignment 1/Code/NavBar.html" class="nav-li-link">Home</a></li>
