--- a/IT1301 Assignment 1/Code/DiningPage.html
+++ b/IT1301 Assignment 1/Code/DiningPage.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class = "buttonarea">
-            <a href = "Assignment 1/Offical/Newform.html" class="text-link1">
+            <a href = "Newform.html" class="text-link1">
                 RESERVE A TABLE NOW
             </a>
         </div>
