--- a/IT1301 Assignment 1/Code/Confirmation.html
+++ b/IT1301 Assignment 1/Code/Confirmation.html
@@ -26,7 +26,7 @@
     <div class ="TextforReservation">
         <h2 class="header2">Reservation Successful!</h2>
         <p class="para1">An email will be sent to you about the reservation details.</p>
-        <a href="IT1301 Assignment 1/Code/NavBar.html" class="Navi">Back to Home</a>
+        <a href="NavBar.html" class="Navi">Back to Home</a>
     </div>  
 </body>
 </html>
