--- a/IT1301 Assignment 1/Dining.html
+++ b/IT1301 Assignment 1/Dining.html
@@ -4,21 +4,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dining</title>
-    <link rel="stylesheet" href="Navbar.css">
-    <link rel="stylesheet" href="DiningPage.css">
+    <link rel="stylesheet" href="CSS/Navbar.css">
+    <link rel="stylesheet" href="CSs/DiningPage.css">
 </head>
 <body>
     <header>
-        <img src="/WongResort.png" alt="logo-img" id = "logo-img">
+        <img src="ResortPicture/WongResort.png" alt="logo-img" id = "logo-img">
         <nav>
             <ul>
-                <li class ="nav-li"><a href="/IT1301 Assignment 1/Code/NavBar.html" class="nav-li-link">Home</a></li>
+                <li class ="nav-li"><a href="ux_design_homepage.html" class="nav-li-link">Home</a></li>
                 <li class ="nav-li"><a href="#" class="nav-li-link">About</a></li>
                 <li class ="nav-li"><a href="#" class="nav-li-link">Rooms</a></li>
-                <li class ="nav-li"><a href="/IT1301 Assignment 1/Code/DiningPage.html" class="nav-li-link">Dining</a></li>
+                <li class ="nav-li"><a href="DiningPage.html" class="nav-li-link">Dining</a></li>
                 <li class ="nav-li"><a href="#" class="nav-li-link">Facilities</a></li>
-                <li class ="nav-li"><a href="/IT1301 Assignment 1/Code/Offers.html" class="nav-li-link">Offers & Packages</a></li>
-                <li class ="nav-li"><a href="#" class="nav-li-link2">Book Room</a></li>
+                <li class ="nav-li"><a href="Offers.html" class="nav-li-link">Offers & Packages</a></li>
+                <li class ="nav-li"><a href="Rooms web page.html" class="nav-li-link2">Book Room</a></li>
             </ul>
         </nav>
     </header>
