--- a/IT1301 Assignment 1/Rooms web page.html
+++ b/IT1301 Assignment 1/Rooms web page.html
@@ -7,7 +7,7 @@
 </head>
 <body>  
     <header>
-        <a href="Homepage.html"><img id="logo" src="images/Reza Resort 3.JPG" alt=""></a>
+        <a href="Homepage.html"><img id="logo" src="ResortPictures/Reza Resort 3.JPG" alt=""></a>
         <nav>
             <ul class="nav__links">
                 <li><a href="#">About</a></li>
@@ -23,7 +23,7 @@
     </header>  
 
     <div class="webpagename">
-        <img id="roombackground" src="images/photo_2023-05-17_17-47-20.jpg" alt="">
+        <img id="roombackground" src="ResortPicture/photo_2023-05-17_17-47-20.jpg" alt="">
         <h1 id="rooms">Rooms</h1>
     </div>
 
@@ -31,7 +31,7 @@
     <div id="allroomcontainer">
     <div class="roomcontainer">
         
-        <img id="image1" src="images/standard room.JPG" alt="">
+        <img id="image1" src="ResortPicture/standard room.JPG" alt="">
 
         <h3 class="roomheader">Standard Room</h3>
         <p id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci rem doloremque deleniti dignissimos cumque aspernatur exercitationem iusto veritatis impedit tenetur, illum ea, officia beatae blanditiis! Aliquam rem tempora beatae libero. </p>
@@ -40,21 +40,21 @@
     </div>
     
     <div class="roomcontainer">
-        <img id="image2" src="images/Deluxe Room.JPG" alt="">
+        <img id="image2" src="ResortPicture/Deluxe Room.JPG" alt="">
         <h3 class="roomheader">Deluxe Room</h3>
         <p id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci rem doloremque deleniti dignissimos cumque aspernatur exercitationem iusto veritatis impedit tenetur, illum ea, officia beatae blanditiis! Aliquam rem tempora beatae libero. </p>
         <a class="learnmoreimgright" href="Deluxe Room.html">Learn More</a>
     </div>
 
     <div class="roomcontainer">
-        <img id="image3" src="images/Premium Suite.JPG" alt="">
+        <img id="image3" src="ResortPicture/Premium Suite.JPG" alt="">
         <h3 class="roomheader">Premium Suite</h3>
         <p id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci rem doloremque deleniti dignissimos cumque aspernatur exercitationem iusto veritatis impedit tenetur, illum ea, officia beatae blanditiis! Aliquam rem tempora beatae libero. </p>
         <a class="learnmoreimgleft" href="PremiumSuite.html">Learn More</a>
     </div>
 
     <div class="roomcontainer">
-        <img id="image4" src="images/Family Room.JPG" alt="">
+        <img id="image4" src="ResortPicture/Family Room.JPG" alt="">
         <h3 class="roomheader">Family Room</h3>
         <p id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci rem doloremque deleniti dignissimos cumque aspernatur exercitationem iusto veritatis impedit tenetur, illum ea, officia beatae blanditiis! Aliquam rem tempora beatae libero. </p>
         <a class="learnmoreimgright" href="FamilyRoom.html">Learn More</a>
