--- a/UX Offical Final/Reactive.html
+++ b/UX Offical Final/Reactive.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Try reactive 1</title>
-  <link rel="stylesheet" href="/CSS/Reactive.css">
+  <link rel="stylesheet" href="CSS/Reactive.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
