--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -16,7 +16,9 @@
   
   <nav>
     <div class="logo">
-      <h4>The LOGO HERE</h4>
+      <a class="NavText" href="Test.html">
+        <h4>The LOGO HERE</h4>
+      </a>
       <!-- REPLACE the h4 with LOGO please -->
     </div>
     <!-- Video by Taryn Elliott: https://www.pexels.com/video/person-pouring-sauce-on-food-3769033/ -->
@@ -51,10 +53,12 @@
     
   </nav>
   <div class="video-container">
-    <video width="700" autoplay loop muted id="ResturantVideo">
-      <source src="ImageNVideo/Resturant.mp4" type="video/mp4">
-      Your browser does not support the video.
-    </video>
+    <article>
+      <video style="aspect-ratio:900/506; width:100%; max-height:80vh;" autoplay loop muted id="ResturantVideo">
+        <source src="ImageNVideo/Resturant.mp4" type="video/mp4">
+        Your browser does not support the video.
+      </video>
+    </article>
   </div>
 
   <div class="TitleOnVideo">
