--- a/UX Offical/Reactive.html
+++ b/UX Offical/Reactive.html
@@ -50,11 +50,13 @@
     
   </nav>
 
+  
 
   <footer>
     <div class="footer-container">
       <p>Footer here Aiman doing</p>
     </div>
+  </footer>
   <script src="JS/Reactive1.js"></script>
 </body>
 </html>
