--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -54,17 +54,16 @@
   </nav>
   <div class="bigimage">
     <image src="ImageNVideo/an image.jpg" style="aspect-ratio:900/506; width:100%; max-height:70vh;">
+      <div class="searchbarcontainer">
+        <label for="checkin" style="padding: 10px;">Check in date:</label>
+        <input type="date" id="start" name="trip-start"  value="2023-08-15" min="2023-01-01" max="2023-12-31">
+        <label for="checkout" style="padding-left: 10px;">Check out date:</label> <!--Need to add some js statement to verify the dates entered here-->
+        <input type="date" id="end" name="trip-end"  value="2023-08-16" min="2023-08-15" max="2023-12-31">
+      </div>
   </div>
-  <div class="searchbar">
-    <form action="">
-      <input type="text" placeholder="Check in date" name="search">
-      <input type="text" placeholder="Check out date" name="search">
-      <input type="text" placeholder="Guests" name="search">
-      <button type="submit"><i class="fa fa-search"></i></button>
-    </form>
-  </div>
+ 
   
-  <div class="aboutus" >
+  <div class="aboutus">
       <p class="paragraph"><strong style="font-size: 30px;">About us</strong><br><br><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
       It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of 
@@ -74,8 +73,7 @@
         Learn more
       </button>
     </p>
-   
-    <img src="images folder/placeholder.png">
+    <img src="ImageNVideo/placeholder.png">
   </div>  
   <div class="specialofferhead">
     <p>Special offers</p>
