--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Home</title><!-- REPLACE title as what u want -->
 </head>
 <body>
@@ -55,10 +56,12 @@
   <div class="bigimage">
     <image src="ImageNVideo/an image.jpg" style="aspect-ratio:900/506; width:100%; max-height:70vh;">
       <div class="searchbarcontainer">
-        <label for="checkin" style="padding: 10px;">Check in date:</label>
-        <input type="date" id="start" name="trip-start"  value="2023-08-15" min="2023-01-01" max="2023-12-31">
-        <label for="checkout" style="padding-left: 10px;">Check out date:</label> <!--Need to add some js statement to verify the dates entered here-->
-        <input type="date" id="end" name="trip-end"  value="2023-08-16" min="2023-08-15" max="2023-12-31">
+        <label for="checkin" style="padding-left: 10px;">Check in date:</label>
+        <input type="date"  name="trip-start"  value="2023-08-15" min="2023-01-01" max="2023-12-31" style="margin-left: 10px;height: 40px; font-size: 18px;" > 
+        <label for="checkout" style="padding-left: 10px;" >Check out date:</label> <!--Need to add some js statement to verify the dates entered here-->
+        <input type="date" name="trip-end"  value="2023-08-16" min="2023-08-15" max="2023-12-31" style="margin-left: 10px;height: 40px;font-size: 18px;">
+        <button type="submit"><i class="fa fa-search"></i></button>
+        
       </div>
   </div>
  
