--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -70,6 +70,6 @@
     <div class="footer-container">
       <p>Footer here Aiman doing</p>
     </div>
-  <script src="/JS/Reactive1.js"></script>
+  <script src="JS/Reactive1.js"></script>
 </body>
 </html>
