--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -56,9 +56,9 @@
   <div class="bigimage">
     <image src="ImageNVideo/an image.jpg" style="aspect-ratio:900/506; width:100%; max-height:70vh;">
       <div class="searchbarcontainer">
-        <label for="checkin" style="padding-left: 10px;">Check in date:</label>
+        <label for="checkin" id="checkindate" style="padding-left: 10px;">Check in date:</label>
         <input type="date"  name="trip-start"  value="2023-08-15" min="2023-01-01" max="2023-12-31" style="margin-left: 10px;height: 40px; font-size: 18px;" > 
-        <label for="checkout" style="padding-left: 10px;" >Check out date:</label> <!--Need to add some js statement to verify the dates entered here-->
+        <label for="checkout" id="checkoutdate" style="padding-left: 10px;" >Check out date:</label> <!--Need to add some js statement to verify the dates entered here-->
         <input type="date" name="trip-end"  value="2023-08-16" min="2023-08-15" max="2023-12-31" style="margin-left: 10px;height: 40px;font-size: 18px;">
         <button type="submit"><i class="fa fa-search"></i></button>
         
@@ -69,13 +69,11 @@
   <div class="aboutus">
       <p class="paragraph"><strong style="font-size: 30px;">About us</strong><br><br><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-      It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of 
-      Letraset sheets containing Lorem Ipsum passages, 
-      and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br><br>
+      rsions of Lorem Ipsum.<br><br>
       <button class="button">
         Learn more
       </button>
-    </p>
+      </p>
     <img src="ImageNVideo/placeholder.png">
   </div>  
   <div class="specialofferhead">
