--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -14,7 +14,7 @@
   
   <title>Home</title><!-- REPLACE title as what u want -->
 </head>
-<body>
+<body style="background-color: #FFFFF0;">
   
   <nav>
     <div class="logo">
@@ -57,7 +57,7 @@
 <a href="Resturant.html">
   <div class="bigimage" alt="main-image">
 </a>
-    <image src="ImageNVideo/an image.jpg" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
+    <image src="ImageNVideo/1080p img.jpg" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
       <div class="overlay">
         <p style="text-align: left;"><span style="font-size: 30;">Where luxury meets paradise</span><br>
          <span> Experience true opulence and<br> personalized service at its finest</span><br>
@@ -82,35 +82,25 @@
         
       </div>
   </div>
- <div class="overlay">
-
- </div>
+ 
   
   <div class="aboutus">
-      <p class="paragraph"><strong style="font-size: 30px;">About us</strong><br><br><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+      <p class="paragraph"><strong style="font-size: 40px;;border-left: 3px solid #FF9F00;padding-left: 15px;">About us</strong><br><br><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      Lorem Ipsum has been the industry's standar dummy text ever
+       since the 1500s, when an unknown printer took a galley of type 
+       and scrambled it to make a type specimen book. 
       rsions of Lorem Ipsum.<br><br>
       <button class="button">
         Learn more
       </button>
       </p>
-    <img src="ImageNVideo/placeholder.png">
+    <img src="ImageNVideo/aboutus.jpg" class="aboutusimg">
   </div>  
-  <div class="specialofferhead">
-    <p>Special offers</p>
-  </div>
-    <div class="offerscontainer">
-      <p><strong style="font-size: 24px;">Packages for you to enjoy</strong><br><br>
-        Text text text text text text text text<br>
-        Text text text text text text text text
-      </p>
-      <img src="images folder/another image.jpg">
-      <button class="button">
-        Learn more
-      </button>
+  <div class="eventsContainer">
+    <p>hashahsdasd</p>
     </div><br><br>
     <div class="bottom">
-      <p class="sectionwords"><strong style="font-size:30px">Catering</strong><br><br><br><br>
+      <p class="sectionwords"><strong style="font-size:30px;">Catering</strong><br><br><br><br>
         random wordsText text text text text text text text
         Text text text text text text text textText
          text text text text text text text
