--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -21,7 +21,6 @@
       </a>
       <!-- REPLACE the h4 with LOGO please -->
     </div>
-    <!-- Video by Taryn Elliott: https://www.pexels.com/video/person-pouring-sauce-on-food-3769033/ -->
     <ul class="nav-links">
       <li>
         <a class="NavText" href="#">About</a>
@@ -52,16 +51,12 @@
     </div>
     
   </nav>
-  <div class="video-container">
-    <article>
-      <video style="aspect-ratio:900/506; width:100%; max-height:80vh;" autoplay loop muted id="ResturantVideo">
-        <source src="ImageNVideo/Resturant.mp4" type="video/mp4">
-        Your browser does not support the video.
-      </video>
-    </article>
-  </div>
 
-  <div class="TitleOnVideo">
+
+
+
+  <div class="TitleOnPic">
+    <img src="" alt="">
     <h1>Resturants</h1>
   </div>
 
