--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -51,14 +51,12 @@
     </div>
     
   </nav>
+  <header>
+    <div class="TitleOnPic">
+      <h1>Resturants</h1>
+    </div>
+  </header>
 
-
-
-
-  <div class="TitleOnPic">
-    <img src="" alt="">
-    <h1>Resturants</h1>
-  </div>
 
 
   <footer>
