--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -52,11 +52,11 @@
     
   </nav>
 
-  <header>
-    <div class="TitleOnPic">
-      <h1>Resturants</h1>
-    </div>
-  </header>
+
+  <div class="Header">
+    <h1>Resturants</h1>
+  </div>
+
 
 
 
