--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -52,10 +52,14 @@
     
   </nav>
 
+  <header>
+    <div class="Header">
+      <img src="ImageNVideo/ResturantBG.jpg" class="HeaderIMG" style="aspect-ratio: 900/506;">
+      <h1>Resturants</h1>
+    </div>
 
-  <div class="Header">
-    <h1>Resturants</h1>
-  </div>
+  </header>
+
 
 
 
@@ -64,6 +68,7 @@
     <div class="footer-container">
       <p>Footer here Aiman doing</p>
     </div>
+  </footer>
   <script src="JS/Reactive1.js"></script>
 </body>
 
