--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -54,7 +54,7 @@
 
   <header>
     <div class="Header">
-      <img src="ImageNVideo/ResturantBG.jpg" class="HeaderIMG" style="aspect-ratio: 900/506;">
+      <img src="ImageNVideo/ResturantBG.jpg" class="HeaderIMG">
       <h1>Resturants</h1>
     </div>
 
