--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -55,11 +55,10 @@
   <header>
     <div class="Header">
       <img src="ImageNVideo/2ndResturantBG.jpg" class="HeaderIMG" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
-      <p class="PicTitle">Resturants</p>
     </div>
   </header>
 
-  <p>Hello</p>
+  <p>Resturant</p>
 
 
 
