--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -58,8 +58,12 @@
     </div>
   </header>
 
-  <p>Resturant</p>
-
+  <div class="ResturantIntro">
+    <div class="Resturant_Border">
+      <p class="WelcomeResturant">Resturant</p>
+    </div>
+    <p>Dine At a wonderful place, with 5 Stars Service. Enjoy the wonderful Scenery we have to offer.</p>
+  </div>
 
 
   <footer>
