--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -65,6 +65,25 @@
     <p>Dine At a wonderful place, with 5 Stars Service. Enjoy the wonderful Scenery we have to offer.</p>
   </div>
 
+  <div class="card-container">
+    <div class="card">
+      <img src="restaurant-1.jpg" alt="Restaurant 1">
+      <h2>Restaurant 1</h2>
+      <p>This is the first restaurant.</p>
+    </div>
+    <div class="card">
+      <img src="restaurant-2.jpg" alt="Restaurant 2">
+      <h2>Restaurant 2</h2>
+      <p>This is the second restaurant.</p>
+    </div>
+    <div class="card">
+      <img src="restaurant-3.jpg" alt="Restaurant 3">
+      <h2>Restaurant 3</h2>
+      <p>This is the third restaurant.</p>
+    </div>
+  </div>
+
+
 
   <footer>
     <div class="footer-container">
