--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -60,7 +60,7 @@
 
   <div class="ResturantIntro">
     <div class="Resturant_Border">
-      <p class="WelcomeResturant">Resturant</p>
+      <p class="WelcomeResturant">Resturants</p>
     </div>
     <p>Dine At a wonderful place, with 5 Stars Service. Enjoy the wonderful Scenery we have to offer.</p>
   </div>
