--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -67,17 +67,17 @@
 
   <div class="card-container">
     <div class="card">
-      <img src="restaurant-1.jpg" alt="Restaurant 1">
+      <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 1">
       <h2>Restaurant 1</h2>
       <p>This is the first restaurant.</p>
     </div>
     <div class="card">
-      <img src="restaurant-2.jpg" alt="Restaurant 2">
+      <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 2">
       <h2>Restaurant 2</h2>
       <p>This is the second restaurant.</p>
     </div>
     <div class="card">
-      <img src="restaurant-3.jpg" alt="Restaurant 3">
+      <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 3">
       <h2>Restaurant 3</h2>
       <p>This is the third restaurant.</p>
     </div>
