--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -54,7 +54,8 @@
 
   <header>
     <div class="Header">
-      <h1>Restaurant<img src="ImageNVideo/2ndResturantBG.jpg" class="HeaderIMG" style="aspect-ratio:900/506; width:100%; max-height:60vh;"></h1>
+      <h1>Restaurant</h1>
+      <img src="ImageNVideo/2ndResturantBG.jpg" class="HeaderIMG" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
       
     </div>
   </header>
