--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -57,7 +57,7 @@
 <a href="Resturant.html">
   <div class="bigimage" alt="main-image">
 </a>
-    <image src="ImageNVideo/1080p img.jpg" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
+    <image src="ImageNVideo/1080p img.jpg" style="aspect-ratio:900/506; width:100%;" class="bigimage">
       <div class="overlay">
         <p style="text-align: left;"><span style="font-size: 30;">Where luxury meets paradise</span><br>
          <span> Experience true opulence and<br> personalized service at its finest</span><br>
