idk wat this is

--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -70,9 +70,41 @@
       </p>
     <img src="ImageNVideo/aboutus.jpg" class="aboutusimg">
   </div>  
-  <div class="eventsContainer">
-    <p>Events container</p>
-    </div><br><br>
+  <div class="eventsContainer" style="justify-content: center;">
+    <p class="paragraph">
+      <strong style="font-size: 40px; border-left: 3px solid #FF9F00;padding-left: 15px; ">
+        Events </strong><br><br><br>
+        Our resort provides different events in which YOU can host various activities.
+      </div>
+    </div>
+    <div class="cardcontainer">
+      <div class="eventsCard1">
+        <img src="ImageNVideo/weddingImg.jpg" style="width: 100%;">
+        <div class="minicontainer">
+          <h4><b>Wedding services</b></h4> 
+          <p>━━━━━━━━━━━━━━━</p>
+          <p>Click to find out more</p> 
+        </div>
+      
+    </div>
+    <div class ="eventsCard2">
+      <img src="ImageNVideo/concertImg.jpg" style="width: 100%;">
+      <div class="minicontainer">
+        <h4><b>Hosting concerts and parties</b></h4> 
+          <p>━━━━━━━━━━━━━━━</p>
+          <p>Click to find out more</p> 
+      </div>
+      </div>
+      <div class="eventsCard3">
+        <img src="ImageNVideo/weddingImg.jpg" style="width: 100%;">
+        <div class="minicontainer">
+          <h4><b>Wedding services</b></h4> 
+          <p>━━━━━━━━━━━━━━━</p>
+          <p>Click to find out more</p> 
+        </div>
+      
+    </div>
+  </div>
     <div class="bottom">
       <p class="sectionwords"><strong style="font-size:30px;">Catering</strong><br><br><br><br>
         random wordsText text text text text text text text
