--- a/UX Offical/Resturant2.html
+++ b/UX Offical/Resturant2.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
-  <title>Home</title><!-- REPLACE title as what u want -->
+  <title>Dining</title><!-- REPLACE title as what u want -->
 </head>
 <body style="background-color: #FFFFF0;">
     <nav>
@@ -26,7 +26,7 @@
             <li><a class="active" href="#">Home</a></li>
             <li><a href="#">about</a></li>
             <li><a href="#">rooms</a></li>
-            <li><a href="#">Catering</a></li>
+            <li><a href="#">dining</a></li>
             <li><a href="#">facilities</a></li>
             <li><a href="#" class="navbutton">Book now</a></li>
         </ul>
@@ -34,13 +34,13 @@
 
     <header>
         <div class="Header">
-          <h1 class = "Title">Restaurant</h1>
+          <h1 class = "Title">Dining</h1>
           <img src="ImageNVideo/2ndResturantBG.jpg" class="HeaderIMG" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
         </div>
     </header>
     
     <div class = "Container_ALL">
-      <p>Dine At a wonderful place, with 5 Stars Service. Enjoy the wonderful Scenery we have to offer.</p>
+      <p class="Dining_Description">The Best Dining Experience we have to offer</p>
     
       <div class="card-container">
         <div class="card">
@@ -48,11 +48,15 @@
           <h2>Restaurant 1</h2>
           <p>This is the first restaurant.</p>
         </div>
+      </div> 
+      <div class="card-container">
         <div class="card">
           <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 2">
           <h2>Restaurant 2</h2>
           <p>This is the second restaurant.</p>
         </div>
+      </div>
+      <div class="card-container">
         <div class="card">
           <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 3">
           <h2>Restaurant 3</h2>
