--- a/UX Offical/Resturant2.html
+++ b/UX Offical/Resturant2.html
@@ -7,7 +7,6 @@
   <title>Try reactive 1</title>
   <link rel="stylesheet" href="CSS/NewNavbar.css">
   <link rel="stylesheet" href="CSS/Resturant.css">
-  <link href="CSS/homepage.css" rel="stylesheet" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
@@ -47,6 +46,9 @@
           <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 1">
           <h2>Restaurant 1</h2>
           <p>This is the first restaurant.</p>
+          <br>
+          <br>
+          <a class = "book_button"href="Resturantform.html">Book Now</a>
         </div>
       </div> 
       <div class="card-container">
@@ -54,6 +56,9 @@
           <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 2">
           <h2>Restaurant 2</h2>
           <p>This is the second restaurant.</p>
+          <br>
+          <br>
+          <a class = "book_button"href="Resturantform.html">Book Now</a>
         </div>
       </div>
       <div class="card-container">
@@ -61,6 +66,9 @@
           <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 3">
           <h2>Restaurant 3</h2>
           <p>This is the third restaurant.</p>
+          <br>
+          <br>
+          <a class = "book_button"href="Resturantform.html">Book Now</a>
         </div>
       </div>
     </div>
