--- a/UX Offical/Resturant2.html
+++ b/UX Offical/Resturant2.html
@@ -22,7 +22,7 @@
         </label>
         <label class ="logo">The logo here</label>
         <ul>
-            <li><a class="active" href="#">Home</a></li>
+            <li><a class="active" href="Homepage.html">Home</a></li>
             <li><a href="#">about</a></li>
             <li><a href="#">rooms</a></li>
             <li><a href="#">dining</a></li>
