--- a/UX Offical/Eventspage1.html
+++ b/UX Offical/Eventspage1.html
@@ -5,28 +5,56 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
         <link rel="stylesheet" href="CSS/NewNavbar.css">
+        <link rel="stylesheet" href="CSS/eventspage1.css">
     </head>
     <body>
-        <nav> 
-            <nav>
-              <input type="checkbox" id="check">
-              <label for="check" class="checkboxbutton">
-                <i class="fa fa-bars" style="font-size:24px"></i>
-              </label>
-              <label class ="logo">The logo here</label>
-              <ul>
-                <li><a class="active" href="#">Home</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">rooms</a></li>
-                <li><a href="#">Catering</a></li>
-                <li><a href="#">facilities</a></li>
-                <li><a href="#" class="navbutton">Book now</a></li>
-              </ul>
-                  </nav>
+      <nav style="font-family: 'Lato', sans-serif;">
+        <input type="checkbox" id="check">
+        <label for="check" class="checkboxbutton">
+          <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
+        </label>
+        <label class ="logo">The logo here</label>
+        <ul>
+          <li><a class="active" href="Homepage.html">Home</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">rooms</a></li>
+          <li><a href="Resturant2.html">Dining</a></li>
+          <li><a href="#">facilities</a></li>
+          <li><a href="#" class="navbutton">Book now</a></li>
+          </ul>
+                </nav>
       </header>
+      <div class="Bigimage" alt="main-image">
+        <image src="ImageNVideo/weddingImg.jpg" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
+      </div>
+      <div class="BigText">
+        <p class="paragraph"><strong style="font-size: 40px;;border-left: 3px solid #FF9F00;padding-left: 15px; font-family: 'Playfair Display', serif;">Wedding services</strong>
+          </p>
+      </div>
+      <p class="summary"> We dedicate our all to give YOU a day truly special </p>
+      <div class="maincontainer">
+        <h1>About this event</h1>
+        <p> From heartwarming love stories to cherished moments, this is where you'll 
+          find everything you need to know about our big day. We'll provide everything that you
+          could ever ask for, venue? Check. Suits and Dresses? Check. We even commission special wedding 
+          cakes based on your choice. Just drop us a call and we'll get it done
+          </p>
+        <h1 style="margin-top: 50px;">Opening hours</h1>
+        <p>We are avaliable at anytime, that is of course we are not busy handling other's special day.
+          Don't worry, we work swiftly to ensure everybody gets what they want.
+        </p>
+      </p>
+        <h1 style="margin-top: 50px;">Additional information</h1>
+        <ol style="font-size: 20px;">
+          <li>1. All purchases made will be non-refundable after a 14-day period.</li>
+          <li>2. Should the number of guests on the event day exceed the number previously discussed, a $200 fine will be imposed.</li>
+          <li>3. Catering  will be provided by the resort, should the number of guests exceed 50 </li>
+        </ol>
+        
+      </div>
     </body>
 </html>
