--- a/UX Offical/Resturant2.html
+++ b/UX Offical/Resturant2.html
@@ -42,33 +42,44 @@
     <div class = "Container_ALL">
       <p class="Dining_Description">The Best Dining Experience we have to offer</p>
       <div class="card-container">
-        <div class="card">
-          <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 1">
-          <h2>Restaurant 1</h2>
-          <p>This is the first restaurant.</p>
-          <br>
-          <br>
-          <a class = "book_button"href="Resturantform.html">Book Now</a>
+        <div class="card-container">
+          <div class="card">
+            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 1">
+            <h2>Restaurant 1</h2>
+            <p>This is the first restaurant.</p>
+            <br>
+            <br>
+            <a class = "book_button"href="Resturantform.html">Book Now</a>
+          </div>
+        </div> 
+        <div class="card-container">
+          <div class="card">
+            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 2">
+            <h2>Restaurant 2</h2>
+            <p>This is the second restaurant.</p>
+            <br>
+            <br>
+            <a class = "book_button"href="Resturantform.html">Book Now</a>
+          </div>
         </div>
-      </div> 
-      <div class="card-container">
-        <div class="card">
-          <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 2">
-          <h2>Restaurant 2</h2>
-          <p>This is the second restaurant.</p>
-          <br>
-          <br>
-          <a class = "book_button"href="Resturantform.html">Book Now</a>
-        </div>
-      </div>
-      <div class="card-container">
-        <div class="card">
-          <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 3">
-          <h2>Restaurant 3</h2>
-          <p>This is the third restaurant.</p>
-          <br>
-          <br>
-          <a class = "book_button"href="Resturantform.html">Book Now</a>
+        <div class="card-container">
+          <div class="card">
+            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 3">
+            <h2>Restaurant 3</h2>
+            <p>This is the third restaurant.</p>
+            <br>
+            <br>
+            <a class = "book_button"href="Resturantform.html">Book Now</a>
+          </div>
+          <div class="card-container">
+            <div class="card">
+              <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 4">
+              <h2>Restaurant 4</h2>
+              <p>This is the Fourth restaurant.</p>
+              <br>
+              <br>
+              <a class = "book_button"href="Resturantform.html">Book Now</a>
+            </div>
         </div>
       </div>
     </div>
