--- a/UX Offical/Resturant2.html
+++ b/UX Offical/Resturant2.html
@@ -41,7 +41,7 @@
 
     <div class = "Container_ALL">
       <p class="Dining_Description">The Best Dining Experience we have to offer</p>
-      <div class="card-container">
+      <div class="container_tally">
         <div class="card-container">
           <div class="card">
             <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 1">
@@ -71,15 +71,36 @@
             <br>
             <a class = "book_button"href="Resturantform.html">Book Now</a>
           </div>
-          <div class="card-container">
-            <div class="card">
-              <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 4">
-              <h2>Restaurant 4</h2>
-              <p>This is the Fourth restaurant.</p>
-              <br>
-              <br>
-              <a class = "book_button"href="Resturantform.html">Book Now</a>
-            </div>
+        </div>
+        <div class="card-container">
+          <div class="card">
+            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 4">
+            <h2>Restaurant 4</h2>
+            <p>This is the Fourth restaurant.</p>
+            <br>
+            <br>
+            <a class = "book_button"href="Resturantform.html">Book Now</a>
+          </div>
+        </div>
+        <div class="card-container">
+          <div class="card">
+            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 5">
+            <h2>Restaurant 5</h2>
+            <p>This is the Fifth restaurant.</p>
+            <br>
+            <br>
+            <a class = "book_button"href="Resturantform.html">Book Now</a>
+          </div>
+        </div>
+        <div class="card-container">
+          <div class="card">
+            <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 6">
+            <h2>Restaurant 6</h2>
+            <p>This is the Sixth restaurant.</p>
+            <br>
+            <br>
+            <a class = "book_button"href="Resturantform.html">Book Now</a>
+          </div>
         </div>
       </div>
     </div>
