--- a/UX Offical/Resturant2.html
+++ b/UX Offical/Resturant2.html
@@ -40,6 +40,7 @@
     
 
     <div class = "Container_ALL">
+      <img class ="IntroPic" src="ImageNVideo/fineDining1.jpg" alt="">
       <p class="Dining_Description">The Best Dining Experience we have to offer</p>
       <div class="container_tally">
         <div class="card-container">
