--- a/UX Offical/Resturant2.html
+++ b/UX Offical/Resturant2.html
@@ -37,11 +37,15 @@
           <img src="ImageNVideo/2ndResturantBG.jpg" class="HeaderIMG" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
         </div>
     </header>
-    
+    <div class="intro_container">
+      <img class ="IntroPic" src="ImageNVideo/FineDiningLandscape1.jpg" alt="">
+      <h1 class="Dining_Description">The Art of Dining</h1>
+      <p class="intro-textsize">Welcome to our exceptional fine dining experience, where culinary artistry meets unparalleled hospitality. Immerse yourself in an ambiance of sophistication and elegance while savoring exquisitely crafted dishes, thoughtfully paired with a curated selection of wines. Prepare to be enchanted as our attentive team ensures a memorable and unforgettable gastronomic journey for every discerning palate.</p>
+    </div>
 
+
+    <h2 class = "Restaurant_Text_Intro">Restaurant at Reza Resort</h2>
     <div class = "Container_ALL">
-      <img class ="IntroPic" src="ImageNVideo/fineDining1.jpg" alt="">
-      <p class="Dining_Description">The Best Dining Experience we have to offer</p>
       <div class="container_tally">
         <div class="card-container">
           <div class="card">
