--- a/UX Offical/Resturant2.html
+++ b/UX Offical/Resturant2.html
@@ -43,10 +43,18 @@
       <p class="intro-textsize">Welcome to our exceptional fine dining experience, where culinary artistry meets unparalleled hospitality. Immerse yourself in an ambiance of sophistication and elegance while savoring exquisitely crafted dishes, thoughtfully paired with a curated selection of wines. Prepare to be enchanted as our attentive team ensures a memorable and unforgettable gastronomic journey for every discerning palate.</p>
     </div>
 
-
-    <h2 class = "Restaurant_Text_Intro">Restaurant at Reza Resort</h2>
+    <div class="card-container">
+      <div class="card">
+        <h2>Todays Menu</h2>
+        <br>
+        <br>
+        <a class = "book_button"href="Resturantform.html">View Menu</a>
+      </div>
+    </div> 
+    <h2 class = "Restaurant_Text_Intro">Restaurants at Reza Resort</h2>
     <div class = "Container_ALL">
       <div class="container_tally">
+
         <div class="card-container">
           <div class="card">
             <img src="ImageNVideo/beachdining1.jpg" alt="Restaurant 1">
