--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -72,7 +72,7 @@
        since the 1500s, when an unknown printer took a galley of type 
        and scrambled it to make a type specimen book. 
       rsions of Lorem Ipsum.<br><br>
-      <button class="button"><a href="Resturant.html">
+      <button class="button"><a href="">
         Learn more
       </button>
     </a>
@@ -98,15 +98,19 @@
         </div>
     </div>
     <div class ="eventsCard2">
+      <a href="Eventspage2.html">
       <img src="ImageNVideo/concertImg.jpg" style="width: 100%;">
       <div class="minicontainer">
         <h3><b>Hosting concerts and parties</b></h3> 
           <hr>
           <p>Click to find out more</p> 
       </div>
+      </a>
       </div>
       <div class="eventsCard3">
+        <a href="Eventspage3.html">
         <img src="ImageNVideo/anotherSpaimg.jpeg" style="width: 100%;">
+      </a>
         <div class="minicontainer">
           <h3><b>Spa and Wellness</b></h3> 
           <hr>
