--- a/UX Offical/Resturant2.html
+++ b/UX Offical/Resturant2.html
@@ -25,7 +25,7 @@
             <li><a class="active" href="Homepage.html">Home</a></li>
             <li><a href="#">about</a></li>
             <li><a href="#">rooms</a></li>
-            <li><a href="#">dining</a></li>
+            <li><a href="Resturant2.html">dining</a></li>
             <li><a href="#">facilities</a></li>
             <li><a href="#" class="navbutton">Book now</a></li>
         </ul>
@@ -121,6 +121,7 @@
     <div class="footer-container">
       <p>Footer here Aiman doing</p>
     </div>
+  </footer>
   <script src="JS/Resturant.js"></script>
 </body>
 </html>
