--- a/UX Offical/Resturantform.html
+++ b/UX Offical/Resturantform.html
@@ -31,9 +31,10 @@
         </ul>
     </nav>
     
+  
     <div class = "form_container">
-        <h1 class="form_title">Resturant Reservation</h1>
-        <form action="Confirmation.html" method="get">
+        <h1 class="form_title">Restaurant Reservation</h1>
+        <form action="Homepage.html" method="get">
             <div class="questions_container">
                 <label for="ReservationDates">Reservation Date:</label>
                 <input type="date" id="ReservationDates" name="ReservationDates" value="YYYY-MM-DD" min="2023-01-01" required>
