--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Try reactive 1</title>
-  <link rel="stylesheet" href="CSS/NewNavbar.css">
+  <link rel="stylesheet" href="CSS/HomepageNav.css">
   <link href="CSS/homepage.css" rel="stylesheet" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
