--- a/UX Offical/Resturant2.html
+++ b/UX Offical/Resturant2.html
@@ -41,7 +41,7 @@
     <div class="intro_container">
       <img class ="IntroPic" src="ImageNVideo/FineDiningLandscape1.jpg" alt="">
       <h1 class="Dining_Description">The Art of Dining</h1>
-      <p class="intro-textsize">Welcome to our exceptional fine dining experience, where culinary artistry meets unparalleled hospitality. Immerse yourself in an ambiance of sophistication and elegance while savoring exquisitely crafted dishes, thoughtfully paired with a curated selection of wines. Prepare to be enchanted as our attentive team ensures a memorable and unforgettable gastronomic journey for every discerning palate.</p>
+      <p class="intro-textsize">welcome. Eat at Our Restaurant Please, Filler, filler, filler,filler Filler, filler, filler,filler Filler, filler, filler,filler.<br>Thanks</p>
     </div>
 
     <div class="menu_container">
