--- a/UX Offical/Resturantform.html
+++ b/UX Offical/Resturantform.html
@@ -7,12 +7,13 @@
   <title>Try reactive 1</title>
   <link rel="stylesheet" href="CSS/NewNavbar.css">
   <link rel="stylesheet" href="CSS/Resturantforms.css">
+  <link rel="stylesheet" href="CSS/Footer.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
-  <title>Dining</title><!-- REPLACE title as what u want -->
+  <title>Dining</title>
 </head>
 <body style="background-color: #FFFFF0;">
     <nav>
@@ -20,7 +21,7 @@
         <label for="check" class="checkboxbutton">
             <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
         </label>
-        <label class ="logo">The logo here</label>
+        <label class ="logo">The logo</label>
         <ul>
             <li><a class="active" href="Homepage.html">Home</a></li>
             <li><a href="#">about</a></li>
@@ -33,7 +34,6 @@
 
   
     <div class = "form_container">
-        </script>
         <h1 class="form_title">Restaurant Reservation</h1>
         <form onsubmit="alert('Successful Booking');">
             <div class="questions_container">
@@ -124,8 +124,33 @@
     </script>
 
     <footer>
-        <div class="footer-container">
-          <p>Footer here Aiman doing</p>
+        <div class="section1_footer">
+            <div class="part1footerleft">
+                <div class="insidepart1">
+                    <h1 class="title">Contact Us</h1>
+                    <div class="contact_container">
+                    <a href="" class="contactlinks"><p class="contacttextfirst">Company Infomation</p></a>
+                    <a href="" class="contactlinks"><p class="contacttext">FAQs</p></a>
+                    <a href="" class="contactlinks"><p class="contacttext">Contact Us</p></a>
+                    </div>
+                </div> 
+            </div>
+
+            <div class="part1footerright">
+                <div class="insidepart1">
+                    <h1 class="title">Socials</h1>
+                    <div class="socialicon_container">
+                    <a href="https://twitter.com/AimanReza06" class="mainsocialmedia"><img src="images/edited/Twitter.jpg" alt="" class="socialmediaiconfirst"></a>
+                    <a href="https://www.facebook.com/TheStraitsTimes?mibextid=LQQJ4d" class="mainsocialmedia"><img src="images/edited/Facebook.jpg" alt="" class="socialmediaicon"></a>
+                    <a href="https://www.instagram.com/righthand_aiman/" class="mainsocialmedia"><img src="images/edited/Instagram.jpg" alt=""class="socialmediaicon"></a>
+                    <!-- <a href="https://vt.tiktok.com/ZSLjpVJJf/" class="mainsocialmedia"><img src="images/edited/Tiktok.jpg" alt="" class="socialmediaicon"></a> -->
+                    </div>  
+                </div>
+            </div>
+        </div>
+
+        <div class="part2footer">
+            <a href=""class="copyright"><p class="copyrighttext">© 2023 Reza Resort. All rights reserved</p></a>
         </div>
     </footer>
 </body>
