--- a/UX Offical/Resturantform.html
+++ b/UX Offical/Resturantform.html
@@ -33,7 +33,7 @@
     </nav>
 
   
-    <div class = "form_container">
+    <div class = "form_container ">
         <h1 class="form_title">Restaurant Reservation</h1>
         <form onsubmit="alert('Successful Booking');">
             <div class="questions_container">
@@ -122,37 +122,38 @@
             }
         })
     </script>
+    <div class="footer-container">
+        <footer>
+            <div class="section1_footer">
+                <div class="part1footerleft">
+                    <div class="insidepart1">
+                        <h1 class="title">Contact Us</h1>
+                        <div class="contact_container">
+                        <a href="" class="contactlinks"><p class="contacttextfirst">Company Infomation</p></a>
+                        <a href="" class="contactlinks"><p class="contacttext">FAQs</p></a>
+                        <a href="" class="contactlinks"><p class="contacttext">Contact Us</p></a>
+                        </div>
+                    </div> 
+                </div>
 
-    <footer>
-        <div class="section1_footer">
-            <div class="part1footerleft">
-                <div class="insidepart1">
-                    <h1 class="title">Contact Us</h1>
-                    <div class="contact_container">
-                    <a href="" class="contactlinks"><p class="contacttextfirst">Company Infomation</p></a>
-                    <a href="" class="contactlinks"><p class="contacttext">FAQs</p></a>
-                    <a href="" class="contactlinks"><p class="contacttext">Contact Us</p></a>
+                <div class="part1footerright">
+                    <div class="insidepart1">
+                        <h1 class="title">Socials</h1>
+                        <div class="socialicon_container">
+                        <a href="https://twitter.com/AimanReza06" class="mainsocialmedia"><img src="images/edited/Twitter.jpg" alt="" class="socialmediaiconfirst"></a>
+                        <a href="https://www.facebook.com/TheStraitsTimes?mibextid=LQQJ4d" class="mainsocialmedia"><img src="images/edited/Facebook.jpg" alt="" class="socialmediaicon"></a>
+                        <a href="https://www.instagram.com/righthand_aiman/" class="mainsocialmedia"><img src="images/edited/Instagram.jpg" alt=""class="socialmediaicon"></a>
+                        <!-- <a href="https://vt.tiktok.com/ZSLjpVJJf/" class="mainsocialmedia"><img src="images/edited/Tiktok.jpg" alt="" class="socialmediaicon"></a> -->
+                        </div>  
                     </div>
-                </div> 
-            </div>
-
-            <div class="part1footerright">
-                <div class="insidepart1">
-                    <h1 class="title">Socials</h1>
-                    <div class="socialicon_container">
-                    <a href="https://twitter.com/AimanReza06" class="mainsocialmedia"><img src="images/edited/Twitter.jpg" alt="" class="socialmediaiconfirst"></a>
-                    <a href="https://www.facebook.com/TheStraitsTimes?mibextid=LQQJ4d" class="mainsocialmedia"><img src="images/edited/Facebook.jpg" alt="" class="socialmediaicon"></a>
-                    <a href="https://www.instagram.com/righthand_aiman/" class="mainsocialmedia"><img src="images/edited/Instagram.jpg" alt=""class="socialmediaicon"></a>
-                    <!-- <a href="https://vt.tiktok.com/ZSLjpVJJf/" class="mainsocialmedia"><img src="images/edited/Tiktok.jpg" alt="" class="socialmediaicon"></a> -->
-                    </div>  
                 </div>
             </div>
-        </div>
 
-        <div class="part2footer">
-            <a href=""class="copyright"><p class="copyrighttext">© 2023 Reza Resort. All rights reserved</p></a>
-        </div>
-    </footer>
+            <div class="part2footer">
+                <a href=""class="copyright"><p class="copyrighttext">© 2023 Reza Resort. All rights reserved</p></a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
     
