--- a/UX Offical/Resturant.html
+++ b/UX Offical/Resturant.html
@@ -17,7 +17,7 @@
   <nav>
     <div class="logo">
       <a class="NavText" href="Test.html">
-        <h4>The LOGO HERE</h4>
+        <h4>The LOGO </h4>
       </a>
       <!-- REPLACE the h4 with LOGO please -->
     </div>
