--- a/UX Offical/ResturantPage.html
+++ b/UX Offical/ResturantPage.html
@@ -63,7 +63,7 @@
             <p>This is the first restaurant.</p>
             <br>
             <br>
-            <a class = "book_button"href="Resturantform.html">Book Now</a>
+            <a class = "book_button"href="Resturantforms2.html">Book Now</a>
           </div>
         </div> 
         <div class="card-container">
@@ -73,7 +73,7 @@
             <p>This is the second restaurant.</p>
             <br>
             <br>
-            <a class = "book_button"href="Resturantform.html">Book Now</a>
+            <a class = "book_button"href="Resturantforms2.html">Book Now</a>
           </div>
         </div>
         <div class="card-container">
@@ -83,7 +83,7 @@
             <p>This is the third restaurant.</p>
             <br>
             <br>
-            <a class = "book_button"href="Resturantform.html">Book Now</a>
+            <a class = "book_button"href="Resturantforms2.html">Book Now</a>
           </div>
         </div>
         <div class="card-container">
@@ -93,7 +93,7 @@
             <p>This is the Fourth restaurant.</p>
             <br>
             <br>
-            <a class = "book_button"href="Resturantform.html">Book Now</a>
+            <a class = "book_button"href="Resturantforms2.html">Book Now</a>
           </div>
         </div>
       </div>
