--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -28,7 +28,7 @@
             <li><a class="active" href="Homepage.html">Home</a></li>
             <li><a href="#">about</a></li>
             <li><a href="#">rooms</a></li>
-            <li><a href="Resturant2.html">Dining</a></li>
+            <li><a href="ResturantPage.html">Dining</a></li>
             <li><a href="#">facilities</a></li>
             <li><a href="#" class="navbutton">Book now</a></li>
             </ul>
