--- a/UX Offical/Restaurant1Page.html
+++ b/UX Offical/Restaurant1Page.html
@@ -37,8 +37,8 @@
     </header>
 
     <div class="Main_container">
-        <h2>Restaurant 1</h2>
-        <p>This is a fine dining restaurant. Etc </p>
+        <h1>Restaurant 1</h1>
+        <p>This is a fine dining restaurant. We provide really good food.</p>
     </div>
 
     <footer>
