--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -124,7 +124,7 @@
      since the 1500s, when an unknown printer took a galley of type 
      and scrambled it to make a type specimen book. 
     rsions of Lorem Ipsum.<br><br>
-    <button class="button"><a href="Resturant2.html">
+    <button class="button"><a href="ResturantPage.html">
       Learn more
     </button>
   </a>
