--- a/UX Offical/Restaurant1Page.html
+++ b/UX Offical/Restaurant1Page.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
-  <title>Dining</title><!-- REPLACE title as what u want -->
+  <title>Restaurant 1</title><!-- REPLACE title as what u want -->
 </head>
 <body style="background-color: #FFFFF0;">
     <nav>
@@ -39,6 +39,10 @@
     <div class="Main_container">
         <h1>Restaurant 1</h1>
         <p>This is a fine dining restaurant. We provide really good food.</p>
+
+        <a href="Resturantforms2.html" class="ReserveButton">Reserve Table</a>
+        <br>
+        <br>
     </div>
 
     <footer>
