--- a/UX Offical/Restaurant1Page.html
+++ b/UX Offical/Restaurant1Page.html
@@ -37,18 +37,27 @@
     </header>
 
     <div class="Main_container">
-        <h1>Restaurant 1</h1>
-        <p>This is a fine dining restaurant. We provide really good food.</p>
-        <h1>Operating Time</h1>
-        <a href="Resturantforms2.html" class="ReserveButton">Reserve Table</a>
-        <br>
-        <br>
-        <h1>Menu</h1>
-        <br>
-        <br>
-        <a href="Willow Menu.pdf" class="ReserveButton">View Menu</a>
-        <br>
-        <br>
+        <div class="spacing_container">
+            <h1>Restaurant 1</h1>
+            <p>This is a fine dining restaurant. We provide really good food.</p>
+            <br>
+            <a href="Resturantforms2.html" class="ReserveButton">Reserve Table</a>
+        </div>
+
+        <div class="spacing_container">
+            <h1>Menu</h1>
+            <br>
+            <br>
+            <a href="Willow Menu.pdf" class="ReserveButton">View Menu</a>
+        </div>
+
+        <div class="spacing_container">
+            <h1>Operating Time</h1>
+            <p>Monday to Friday: 9am to 11pm</p>
+            <p>Saturday and Sunday: Closed</p>
+        </div>
+
+
 
     </div>
 
